[gd_scene load_steps=7 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://player_dancer_shadow.png" type="Texture" id=2]
[ext_resource path="res://player_dancer.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "jump"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("s:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -11.03 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("s_shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;
render_mode unshaded;
 
uniform float width : hint_range(0.0, 16.0);
uniform vec4 outline_color : hint_color;
 
void fragment()
{
    vec2 size = vec2(width) / vec2(textureSize(TEXTURE, 0));
   
    vec4 sprite_color = texture(TEXTURE, UV);
   
    float alpha = sprite_color.a;
    alpha += texture(TEXTURE, UV + vec2(0.0, -size.y)).a;
    alpha += texture(TEXTURE, UV + vec2(size.x, -size.y)).a;
    alpha += texture(TEXTURE, UV + vec2(size.x, 0.0)).a;
    alpha += texture(TEXTURE, UV + vec2(size.x, size.y)).a;
    alpha += texture(TEXTURE, UV + vec2(0.0, size.y)).a;
    alpha += texture(TEXTURE, UV + vec2(-size.x, size.y)).a;
    alpha += texture(TEXTURE, UV + vec2(-size.x, 0.0)).a;
    alpha += texture(TEXTURE, UV + vec2(-size.x, -size.y)).a;
   
    vec3 final_color = mix(outline_color.rgb, sprite_color.rgb, sprite_color.a);
    COLOR = vec4(final_color, clamp(alpha, 0.0, 1.0));
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/width = 1.72
shader_param/outline_color = Color( 0.419608, 0.419608, 0.419608, 1 )

[node name="player" type="Node2D"]
script = ExtResource( 1 )

[node name="move" type="Timer" parent="."]
one_shot = true

[node name="position" type="Tween" parent="."]

[node name="s_scale" type="Tween" parent="."]

[node name="s_color" type="Tween" parent="."]

[node name="jump" type="AnimationPlayer" parent="."]
anims/jump = SubResource( 1 )

[node name="s_shadow" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="s" type="Sprite" parent="."]
material = SubResource( 3 )
texture = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
[connection signal="timeout" from="move" to="." method="_on_Timer_timeout"]
